# HelixAerogel

./: .gitignore  CMakeLists.txt  README.md  analyzeRuns.cpp  batchRunSim.sh  batchRunSimDiv.sh  init.mac  nrc.mac  sourceGeant4.sh
include/: HLXActionInitialization.hh  HLXAerogel.hh  HLXCCDDetector.hh  HLXDetectorConstruction.hh  HLXMaterials.hh  HLXPrimaryGeneratorAction.hh  HLXRunAction.hh  HLXRunAction.hh~  HLX_CCDDetector.hh  HLX_CCDDetector.hh~  PhysicsList.hh
macros/: init_vis.mac  nrc_batch.mac  nrc_batch_div.mac  processSims.py  vis.mac
src/: HLX.cc  HLXActionInitialization.cpp  HLXAerogel.cpp  HLXCCDDetector.cpp  HLXDetectorConstruction.cpp  HLXMaterials.cpp  HLXPrimaryGeneratorAction.cpp  HLXRunAction.cpp  HLX_CCDDetector.cpp  PhysicsList.cpp  analyzeRuns.cc
